# secure-channel

./: Cargo.toml  README.md  signed_encrypted_message.json
src/: aes.rs  elgamal.rs  hybrid_enc.rs  keys.rs  main.rs  message.rs  schnorr.rs  serializers.rs  tests.rs
