[package]
name = "Exercise2"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }
rand = "0.8.5"
sha2 = "0.10"

aes-gcm = "0.10.1"
aead = "0.5.1"
base64 = "0.22.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
